# carrizo-pathtracer

./: .gitignore  CImg.h  CMakeLists.txt  Makefile  Readme.md  cDepthShader.cpp  cMaterialShader.cpp  cMaterialShader.h  cNaivePTShader.h  cNormalsShader.cpp  cNormalsShader.h  cObject.cpp  cObject.h  cPathtracer.cpp  cPathtracer.h  cShader.h  carrizo.cpp  carrizo.h  material.h  ray.h  rendModel.cpp  rendModel.h  uml class.graffle  vecmat.cpp  vecmat.h
carrizo-pathtracer.xcodeproj/: cObject.cpp  cObject.h  project.pbxproj  rendModel.cpp  rendModel.h  vecmat.cpp
carrizo-pathtracer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
carrizo-pathtracer.xcodeproj/project.xcworkspace/xcuserdata/william.xcuserdatad/: UserInterfaceState.xcuserstate
carrizo-pathtracer.xcodeproj/xcuserdata/william.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
carrizo-pathtracer.xcodeproj/xcuserdata/william.xcuserdatad/xcschemes/: carrizo.xcscheme  xcschememanagement.plist
image log/: Readme.md
include/: carrizo.h  material.h  rendModel.h
include/shaders/: cNormalsShader.h
src/: CMakeLists.txt  Makefile  cObject.cpp  cObject.h  cPathtracer.cpp  cPathtracer.h  carrizo.cpp  random.h  rendModel.cpp  rendModel.h  vecmat.cpp  vecmat.h
src/shaders/: cDepthShader.cpp  cDepthShader.h  cMaterialShader.cpp  cMaterialShader.h  cNaivePTShader.cpp  cNaivePTShader.h  cNormalsShader.cpp  cShader.h
tests/: Readme.md  test_rendModel.cpp  test_vecmat.cpp
